Fix Activites padding top on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -615,7 +615,8 @@ footer li:hover {
     /* Mobile - Section: Activités */
 
     #activites {
-        padding: 0;
+        padding: 16px 0;
+        margin-top: 0;
     }
 
     .activites-column {
